--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -5,11 +5,11 @@ EXPOSE 3306
 RUN set -eax ; \
 	apt update ; \
 	apt -y upgrade ; \
-	apt -y install mariadb-server mariadb-client ; \
+	apt -y install mariadb-server; \
 	rm -rf /var/lib/apt/lists/*
 
-# COPY config/my.cnf /etc/
+COPY config/my.cnf /etc/mysql/
 
-COPY	config/entrypoint.sh			/
+COPY config/entrypoint.sh /
 
 ENTRYPOINT [ "/bin/sh", "entrypoint.sh" ]
