--- a/nginx/config/default.conf
+++ b/nginx/config/default.conf
@@ -3,5 +3,7 @@ server {
         listen 80 default_server;
         listen [::]:80 default_server;
 		
+		server_name mravily.42.fr;
+
 		return 301 https://$host$request_uri;
 }
