--- a/nginx/config/wordpress.conf
+++ b/nginx/config/wordpress.conf
@@ -1,19 +1,23 @@
 server {
 	include	/etc/nginx/mime.types;
 	default_type application/octet-stream;  
-	
-    listen 443 ssl http2;
+	sendfile                    on;                                             # Sendfile permettra de se délester pour l’envoi des fichiers aux navigateurs.
+
+	server_name mravily.42.fr;
+
+    listen 443 ssl;
+    # listen 443 ssl http2;
 
 	ssl_protocols TLSv1.2;
 	ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-	ssl_prefer_server_ciphers on;
-	ssl_ciphers ECDH+AESGCM:ECDH+AES256-CBC:ECDH+AES128-CBC:DH+3DES:!ADH:!AECDH:!MD5;
-	ssl_dhparam /etc/nginx/certs/dhparam.pem;
-	ssl_trusted_certificate /etc/nginx/certs/cert.pem;
-	add_header Strict-Transport-Security "max-age=31536000" always;
-    ssl_session_timeout 4h;
-	ssl_session_tickets on;
+	# ssl_prefer_server_ciphers on;
+	# ssl_ciphers ECDH+AESGCM:ECDH+AES256-CBC:ECDH+AES128-CBC:DH+3DES:!ADH:!AECDH:!MD5;
+	# ssl_dhparam /etc/nginx/certs/dhparam.pem;
+	# ssl_trusted_certificate /etc/nginx/certs/cert.pem;
+	# add_header Strict-Transport-Security "max-age=31536000" always;
+    # ssl_session_timeout 4h;
+	# ssl_session_tickets on;
 
 	root /usr/share/webapps/wordpress/;
 
