--- a/nginx/config/wordpress.conf
+++ b/nginx/config/wordpress.conf
@@ -1,42 +1,48 @@
 server {
-	include	/etc/nginx/mime.types;
-	default_type application/octet-stream;  
-	sendfile                    on;                                             # Sendfile permettra de se délester pour l’envoi des fichiers aux navigateurs.
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
 
 	server_name mravily.42.fr;
 
-    listen 443 ssl;
-    # listen 443 ssl http2;
-
-	ssl_protocols TLSv1.2;
+	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
-	# ssl_prefer_server_ciphers on;
-	# ssl_ciphers ECDH+AESGCM:ECDH+AES256-CBC:ECDH+AES128-CBC:DH+3DES:!ADH:!AECDH:!MD5;
-	# ssl_dhparam /etc/nginx/certs/dhparam.pem;
-	# ssl_trusted_certificate /etc/nginx/certs/cert.pem;
-	# add_header Strict-Transport-Security "max-age=31536000" always;
-    # ssl_session_timeout 4h;
-	# ssl_session_tickets on;
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers ECDH+AESGCM:ECDH+AES256-CBC:ECDH+AES128-CBC:DH+3DES:!ADH:!AECDH:!MD5;
+	ssl_dhparam /etc/nginx/certs/dhparam.pem;
+	ssl_trusted_certificate /etc/nginx/certs/cert.pem;
+	add_header Strict-Transport-Security "max-age=31536000" always;
+    ssl_session_timeout 4h;
+	ssl_session_tickets on;
 
-	root /usr/share/webapps/wordpress/;
+	root /var/www/wordpress;
 
-	index index.php;
+	index  index.php;
 
 	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
 		try_files $uri $uri/ /index.php$is_args$args;
   	}
 	
 
-	# pass the PHP scripts to FastCGI server listening on wordpress:9000
-	location ~ \.php$ {
-		fastcgi_split_path_info ^(.+\.php)(/.+)$;
-		fastcgi_pass webapp:9000;
+	location ~ [^/]\.php(/|$) {
+		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+		if (!-f $document_root$fastcgi_script_name) {
+			return 404;
+		}
+
+		# Mitigate https://httpoxy.org/ vulnerabilities
+		fastcgi_param HTTP_PROXY "";
+
+		fastcgi_pass web_app:9000;
 		fastcgi_index index.php;
+
+		# include the fastcgi_param setting
 		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+
+		# SCRIPT_FILENAME parameter is used for PHP FPM determining
+		#  the script name. If it is not set in fastcgi_params file,
+		# i.e. /etc/nginx/fastcgi_params or in the parent contexts,
+		# please comment off following line:
+		fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
 	}
 }
