--- a/nginx/config/wordpress.conf
+++ b/nginx/config/wordpress.conf
@@ -2,7 +2,7 @@ server {
 	listen 443 ssl http2;
 	listen [::]:443 ssl http2;
 
-	server_name mravily.42.fr;
+	server_name DOMAIN_NAME;
 
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/certs/cert.pem;
@@ -15,7 +15,7 @@ server {
     ssl_session_timeout 4h;
 	ssl_session_tickets on;
 
-	root /var/www/wordpress;
+	root /var/www/inception;
 
 	index  index.php;
 
@@ -23,7 +23,6 @@ server {
 		try_files $uri $uri/ /index.php$is_args$args;
   	}
 	
-
 	location ~ [^/]\.php(/|$) {
 		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 		if (!-f $document_root$fastcgi_script_name) {
