lts: MariaDB Service V1.0 :bookmark:
 - Change ownership directories Dockerfile
 - Clean up config files
 - Remove wordpress.sql

--- a/mariadb/config/my.cnf
+++ b/mariadb/config/my.cnf
@@ -1,9 +1,17 @@
-# Fichier de configurations des options de demarrage pour le serveur, et par le client
-# Groupe concernee par la configuration des options
+# This group is read both both by the client and the server
+# use it for options that affect everything
+[client-server]
+port=3306
+socket=/run/mysqld/mysqld.sock
+
+# This group is read by the server
 [mysqld]
-user = root
-datadir = /var/lib/mysql/
-port = 3306
-log-bin = /var/lib/mysql-bin
-bind-address = 0.0.0.0
-skip-networking = false
+user=mysql
+
+datadir=/var/lib/mysql
+
+# Disabling symbolic-links is recommended to prevent assorted security risks
+symbolic-links=0
+
+# include all files from the config directory
+!includedir /etc/my.cnf.d/
