docs: fix exemple php_cfg path

--- a/.env_exemple
+++ b/.env_exemple
@@ -18,7 +18,7 @@ DB_PASS=
 DB_NAME=
 
 ## Wordpress
-PHP_CFG="/path/to/php/config/files"		# ./wordpress/config/
+PHP_CFG="/path/to/php/config/files"		# ./wordpress/config/www.conf
 PHP_DB="/path/to/db/configs/for/wp"		# ./wordpress/config/db
 DIR_WP="/path/where/install/wp"			# /var/www/inception
 DB_HOST="name_service_db"				# database
