--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,62 +1,35 @@
 version: "3.9"
 services:
-  web_app:
+  webapp:
     container_name: wordpress
     build:
       context: ./wordpress
       dockerfile: Dockerfile
-    healthcheck:
-      test: [ "CMD", "cgi-fcgi", "-bind", "-connect", "127.0.0.1:9000${DIR_WP}" ]
-    env_file:
-      - .env
-    volumes:
-      - ${PATH_DATA}/web_data:/var/www/inception
-      - ${PHP_CFG}:/etc/php81/php-fpm.d/www.conf
-      - ${PHP_DB}:/tmp/php
     depends_on:
-      database :
-        condition: service_healthy
-    networks:
-      - internal
-    restart: on-failure
-
+      - database
+    links:
+      - database
   server:
     container_name: nginx
     build:
       context: ./nginx
       dockerfile: Dockerfile
-      args:
-        DOMAIN_NAME : ${DOMAIN_NAME}
-    depends_on:
-      web_app :
-        condition: service_healthy
     ports:
+      - 80:80
       - 443:443
+    links:
+      - webapp
     restart: always
-    volumes:
-      - ${PATH_DATA}/web_data:/var/www/inception
-      - ${CERTS}:/etc/nginx/certs
-    networks:
-      - internal
-
   database:
     container_name: mariadb
     build:
       context: ./mariadb
       dockerfile: Dockerfile
-    env_file:
-      - .env
     volumes:
-      - ${PATH_DATA}/database:/var/lib/mysql
-      - ${PATH_CFG}/my.cnf:/etc/my.cnf
-      - ${PATH_CFG}/mariadb-server.cnf:/etc/my.cnf.d/mariadb-server.cnf
-      - ${PATH_CFG}/install.sql:/tmp/install.sql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "--silent"]
+      - database:/var/lib/mysql
+      - ./db-data:/var/lib/mysql
     restart: always
-    networks:
-      - internal
 
-networks:
-  internal:
-    driver: bridge
+volumes:
+  database:
+    name: wp_db
